--- a/res/style.css
+++ b/res/style.css
@@ -109,33 +109,6 @@ h2{
     padding-top: 15px;
     padding-bottom: 10px;
     background-color: burlywood;
-    border-bottom-color: white;
-    border-bottom-style: dashed;
-    border-bottom-width: thick;
-}
-
-.flow-group{
-    width: 100%;
-    margin-bottom: 15px;
-    padding-top: 5px;
-    padding-bottom: 5px;
-    border-radius: 10px;
-    background-color: #ece9cd;
-}
-
-.flow-group > label{
-    padding-right: 5%;
-    padding-left: 5%;
-    font-size: 15px;
-    color: burlywood;
-    font-weight: bolder;
-}
-
-.flow-group > input{
-    width: 85%;
-    height: 30px;
-    padding-left: 10px;
-    border-radius: 5px;
 }
 
 .time-input{
@@ -145,7 +118,7 @@ h2{
     background-color: burlywood;
 }
 
-.time-input > textarea{
+textarea{
     width: 100%;
     height: 100px;
     background-color: #ece9cd;
@@ -163,4 +136,40 @@ h2{
     height: 30px;
     text-align: center;
     border-radius: 5px;
+}
+
+/* result Styling */
+
+.result{
+	padding: 40px;
+    padding-top: 15px;
+    padding-bottom: 20px;
+    background-color: burlywood;
+}
+
+table {
+	margin: 15px;
+	width: 95%;
+	border-collapse: collapse;
+}
+
+tr{
+	height: 30px;
+}
+
+th {
+	background-color: #84c6d7;
+	color: aliceblue;
+}
+
+td, th {
+	padding: 10px;
+}
+
+tr:nth-child(even) {
+	background-color: #f2f2f2;
+}
+
+tr:nth-child(odd) {
+	background-color: #ece9cd;
 }
