--- a/res/style.css
+++ b/res/style.css
@@ -162,6 +162,14 @@ th {
 	color: aliceblue;
 }
 
+.th-2{
+	width:20%; text-align:center;
+}
+
+.th-8{
+	width:80%; text-align:center;
+}
+
 td, th {
 	padding: 10px;
 }
@@ -172,4 +180,8 @@ tr:nth-child(even) {
 
 tr:nth-child(odd) {
 	background-color: #ece9cd;
+}
+
+.subtitle-table{
+	color: white; margin-top:0px;
 }
